# clash-haskell_edge_detection

./: README.md  clash_output.txt  clash_vect2vect_func.dyn_o  clash_vect2vect_func.hi  clash_vect2vect_func.hs  guassian_blur.hs  guassian_blur_GDlib_impl.hs  guassian_blur_imgproc_impl.hs  guassian_hip1.5.3toclash.dyn_hi  guassian_hip1.5.3toclash.dyn_o  guassian_hip1.5.3toclash.hi  guassian_hip1.5.3toclash.hs  haskell_canny_impl.hs  img_processing_tutorial.hs  temp.hs
clash-ex/: FIR.dyn_hi  FIR.dyn_o
clash-ex/clash_tutorial/: MAC.dyn_hi  MAC.dyn_o  MAC.hs
clash-ex/clash_tutorial/vhdl/MAC/: mac_topentity.manifest  mac_topentity.vhdl  mac_types.vhdl
clash-ex/vhdl/FIR/: fir_fsaturatingnumsigned_csatmult.vhdl  fir_fsaturatingnumsigned_csatplus.vhdl  fir_topentity.manifest  fir_topentity.vhdl  fir_types.vhdl  fir_window.vhdl
friday-examples/: .cabal  cabal.config  cabal.sandbox.config  stack.yaml
friday-examples/.stack-work/install/x86_64-linux/lts-12.9/8.4.3/flag-cache/: friday-ex-0.1.0.0-5QgHnxU2UZZBPQOfPvFcf5
friday-examples/.stack-work/install/x86_64-linux/lts-12.9/8.4.3/lib/x86_64-linux-ghc-8.4.3/friday-ex-0.1.0.0-5QgHnxU2UZZBPQOfPvFcf5/: Lib.dyn_hi  Lib.hi  Paths_friday_ex.dyn_hi  Paths_friday_ex.hi
friday-examples/.stack-work/install/x86_64-linux/lts-12.9/8.4.3/pkgdb/: friday-ex-0.1.0.0-5QgHnxU2UZZBPQOfPvFcf5.conf  package.cache
friday-examples/src/: Main
vhdl/GAUSSIAN/: gaussian_topentity.manifest  gaussian_topentity.vhdl  gaussian_types.vhdl
vhdl/VECT2VECT/: vect2vect_topentity.manifest  vect2vect_topentity.vhdl  vect2vect_types.vhdl
(+8 files in other folders)
