name:                   friday-examples
--                      +-+------- breaking API changes
--                      | | +----- non-breaking API additions
--                      | | | +--- code changes with no API change
version:                0.1.0.1
synopsis:               Image processing examples which use the friday image
                        library.
homepage:               https://github.com/RaphaelJ/friday-examples
license:                LGPL-3
license-file:           LICENSE
author:                 Raphael Javaux <raphaeljavaux[at]gmail.com>
maintainer:             Raphael Javaux <raphaeljavaux[at]gmail.com>

category:               Graphics
stability:              Experimental
build-type:             Simple
cabal-version:          >= 1.10

source-repository       head
    type:               git
    location:           https://github.com/RaphaelJ/friday-examples

executable      canny
    main-is:            Canny.hs
    ghc-options:        -Wall -O2 -rtsopts
    hs-source-dirs:     src/
    default-language:   Haskell2010

    build-depends:      base                    >= 4            && < 5
                      , friday                  >= 0.2          && < 0.3
                      , friday-devil            >= 0.1          && < 0.2
